<resources>
    <string name="app_name">Tictactoe</string>
    <string name="access_join">AccessJoin</string>
    <string name="create_room">Create Room</string>
    <string name="error">error</string>
    <string name="loading">loading</string>
    <string name="username">User Name</string>
    <string name="room_id">Room ID</string>
    <string name="exit_room">Exit</string>
    <string name="room_id_null">Room id is null</string>
    <string name="back_pressed">Вы точно хотите выйти?</string>
    <string name="loading_room">Room loading...</string>
    <string name="update_table">Update Table</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="win_first">win first</string>
    <string name="win_second">win second</string>
    <string name="win_nothing">win_nothing</string>
    <string name="nickname">nickname</string>
    <string name="incorrect_nickname">incorrect nickname</string>
    <string name="incorrect_room_id">incorrect room id</string>
    <string name="enter">Enter</string>
    <string name="messages">messages</string>
</resources>