<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:id="@+id/content_win"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/win_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/exit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/exit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/loading_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/retry_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/retry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/room_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/room_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/current_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/opponent_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/bu1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginHorizontal="10dp" />

                    <Button
                        android:id="@+id/bu2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginHorizontal="10dp" />

                    <Button
                        android:id="@+id/bu3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginHorizontal="10dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/bu4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginHorizontal="10dp" />

                    <Button
                        android:id="@+id/bu5"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginHorizontal="10dp" />

                    <Button
                        android:id="@+id/bu6"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginHorizontal="10dp" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/bu7"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginHorizontal="10dp" />

                    <Button
                        android:id="@+id/bu8"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginHorizontal="10dp" />

                    <Button
                        android:id="@+id/bu9"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginHorizontal="10dp" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/room_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/exit_room" />
        </LinearLayout>
    </FrameLayout>
</ScrollView>